Final website just need to put it through the validator

--- a/aboutus.html
+++ b/aboutus.html
@@ -32,7 +32,7 @@
   <div class="content">
     <p> Growing up I've seen lots of Maori and Pasifika families struggle with
       finances. Maori and Pasifika people are more vulnerable to financial
-      issues. This is largely due to the lack of resources, discussions and
+      issues and this is largely due to the lack of resources, discussions and
       guidance around topics like managing debt, having multiple streams of
       outcome, investing etc.</p>
 
