--- a/modules.html
+++ b/modules.html
@@ -27,63 +27,73 @@
 
 
 
-<!--Modules -->
+  <!--Modules -->
   <div class="triple-containers-container">
-      <div class="triple-container">
-          <div class="triple-container-header">
-              Introduction to Financial Literacy
-          </div>
-          <div class="triple-container-body">
-              This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
-              for some information on how to start your journey.
-          </div>
-          <div class="triple-container-footer">
-              <a href="intro.html">
-                  <button class="container-button">
-                      View More
-                  </button>
-              </a>
-          </div>
+    <div class="triple-container">
+      <div class="triple-container-header">
+        Introduction to Financial Literacy
       </div>
-      <div class="triple-container">
-          <div class="triple-container-header">
-              Budgeting Basics
-          </div>
-          <div class="triple-container-body">
-              This module will take you through the basics of what a budget is,
-              the parts of a budget and the top spending areas for most
-              households.
-          </div>
-          <div class="triple-container-footer">
-              <a href="budgeting.html">
-                  <button class="container-button">
-                      View More
-                  </button>
-              </a>
-          </div>
+      <div class="center">
+        <img src="intro_slides/1.png" title="Intro Slides 1" alt="Intro Slides 1" width="350px" height="200px">
       </div>
-      <div class="triple-container">
-          <div class="triple-container-header">
-              Expect the Unexpected
-          </div>
-          <div class="triple-container-body">
-              Fa'alavelave a common financial obligation in Samoan communities.
-              In this module we learn the importance of having an emergency fund
-              to be prepared for these unexpected times.
-          </div>
-          <div class="triple-container-footer">
-              <a href="savings.html">
-                  <button class="container-button">
-                      View More
-                  </button>
-              </a>
-          </div>
+      <div class="triple-container-body">
+        This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
+        for some information on how to start your journey.
       </div>
+      <div class="triple-container-footer">
+        <a href="intro.html">
+          <button class="container-button">
+            View More
+          </button>
+        </a>
+      </div>
+    </div>
+    <div class="triple-container">
+      <div class="triple-container-header">
+        Budgeting Basics
+      </div>
+      <div class="center">
+        <img src="budgeting_slides/1.png" title="Budgeting Slides 1" alt="Intro Slides 1" width="350px" height="200px">
+      </div>
+      <div class="triple-container-body">
+        This module will take you through the basics of what a budget is,
+        the parts of a budget and the top spending areas for most
+        households.
+      </div>
+      <div class="triple-container-footer">
+        <a href="budgeting.html">
+          <button class="container-button">
+            View More
+          </button>
+        </a>
+      </div>
+    </div>
+    <div class="triple-container">
+      <div class="triple-container-header">
+        Expect the Unexpected
+      </div>
+      <div class="center">
+        <img src="savings_slides/1.png" title="Savings Slides 1" alt="Savings Slides 1" width="350px" height="200px">
+      </div>
+      <div class="triple-container-body">
+        Fa'alavelave a common financial obligation in Samoan communities.
+        In this module we learn the importance of having an emergency fund
+        to be prepared for these unexpected times.
+      </div>
+      <div class="triple-container-footer">
+        <a href="savings.html">
+          <button class="container-button" href="savings.html">
+            View More
+          </button>
+        </a>
+      </div>
+    </div>
 
-      </div>
-      <div class="footer">
-        <p>Disclaimer I am not a financial advisor this is just general advice about
-        financial literacy for educational purposes</p>
-      </div>
+  </div>
+  <div class="footer">
+    <p>Disclaimer I am not a financial advisor this is just general advice about
+      financial literacy for educational purposes</p>
+  </div>
 </body>
+
 </html>
