--- a/resources.html
+++ b/resources.html
@@ -28,6 +28,9 @@
           <div class="triple-container-header">
               Maori Millionaire
           </div>
+          <div class="center">
+  <img src="Te_Kahukura_Boynton.png" title="Te Kahukura Boynton" alt="Te Kahukura Boynton" width="200px" height=200px">
+</div>
           <div class="triple-container-body">
               Te Kahukura Boynton owner of Maori Millionire has a blog and
               podcasts where she teaches various financial literacy topics
@@ -44,7 +47,12 @@
       </div>
       <div class="triple-container">
           <div class="triple-container-header">
-              Tales From a Financial Mess
+              Tales From a Financial Hot Mess
+          </div>
+          <div class="center">
+            <img src="frances_cook.png" title="Frances Cook" alt="Frances Cook
+            with her book 'Tales From a Financial Hot Mess'" width="190px"
+            height=200px">
           </div>
           <div class="triple-container-body">
               Frances Cook tells her personal story about reaching financial
@@ -54,7 +62,8 @@
               the starting point is.
           </div>
           <div class="triple-container-footer">
-              <a href="budgeting.html">
+              <a href="https://www.penguin.co.nz/authors/frances-cook"
+              target="_blank">
                   <button class="container-button">
                       View More
                   </button>
@@ -65,6 +74,10 @@
           <div class="triple-container-header">
               Girls That Invest
           </div>
+          <div class="center">
+            <img src="Sim_and_Sonya.png" title="Sim & Sonya"
+            alt="Sim & Sonya" width="180px" height=200px">
+          </div>
           <div class="triple-container-body">
               Sim & Sonya founded this amazing educational podcast that educates
               people on all things investing. Their podcast is an awesome
@@ -72,7 +85,7 @@
               in.
           </div>
           <div class="triple-container-footer">
-              <a href="https://girlsthatinvest.com/" target="_blank">
+              <a href="https://girlsthatinvest.com/"  target="_blank">
                   <button class="container-button">
                       View Website
                   </button>
