--- a/savings.html
+++ b/savings.html
@@ -23,50 +23,61 @@
     <a href="resources.html">Resources</a>
   </div>
 
+  <div class="slideshow-container">
 
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+      <img src="savings_slides/1.png" alt="savings slide 1" style="width:100%">
+    </div>
 
-  <!-- Resources Form -->
-  <div class="content">
-    <h2>Expect the Unexpected: Fa'alavelave</h2>
-    <p>An example of a major financial issue in Samoan communities is managing
-    fa’alavelave which can be funerals, weddings, birthdays etc where there is
-    a financial obligation to give money. Similar variations also exist in other
-    Pasifika and Māori communities.</p>
+    <div class="mySlides fade">
+      <img src="savings_slides/2.png" alt="savings slide 2" style="width:100%">
+    </div>
 
-    <p>Family and giving are extremely valued in Samoan culture therefore
-    it’s in or nature to want to give back and help out our families/communities
-    in the form of money donations. This beautiful part of our culture can
-    quickly become out of hand when families prioritise this over putting food
-    on the table for their own households.</p>
+    <div class="mySlides fade">
+      <img src="savings_slides/3.png" alt="savings slide 3" style="width:100%">
+    </div>
 
-    <p>Fa’alavelave like funerals often come up unexpectedly so families
-    have to find a way to come up with quick cash. This usually means cutting
-    out household spending or borrowing a loan which can quickly become a heavy
-    financial burden especially with loan sharks.</p>
+    <div class="mySlides fade">
+      <img src="savings_slides/4.png" alt="savings slide 4" style="width:100%">
+    </div>
 
-    <p>This poses the question how do we develop a money mindset and/or money
-    habits that allow us to contribute to family/cultural practices but not at
-    the expense of our own financial well-being? We can’t control when a
-    fa’alavelave will happen however we can attempt to prepare by putting money
-    aside for a rainy day and demonstrates the importance of having an emergency
-    fund for when unexpected events like a fa'alavelave come up.</p>
+    <div class="mySlides fade">
+      <img src="savings_slides/5.png" alt="savings slide 5" style="width:100%">
+    </div>
 
-    <p>For some families this may not be possible as they
-    trying to live from pay day to pay day therefore finding a balance is
-    extremely important even if this means contributing later or in a different
-    way. The most effective ways of dealing with fa’alavelave is through being
-    proactive instead of reactive because it can have many negative
-    flow-on effects.</p>
+    <div class="mySlides fade">
+      <img src="savings_slides/6.png" alt="savings slide 6" style="width:100%">
+    </div>
 
+    <div class="mySlides fade">
+      <a href="savingsquiz.html"><img src="savings_slides/7.png" alt="savings slide 7" style="width:100%"></a>
+    </div>
 
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
 
-    <a href="savingsquiz.html">Expect the Unexpected Quiz</a>
+  <!-- The dots/circles -->
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+    <span class="dot" onclick="currentSlide(4)"></span>
+    <span class="dot" onclick="currentSlide(5)"></span>
+    <span class="dot" onclick="currentSlide(6)"></span>
+    <span class="dot" onclick="currentSlide(7)"></span>
   </div>
 
-<div class="footer">
-  <p>Disclaimer I am not a financial advisor this is just general advice about
-  financial literacy for educational purposes</p>
-</div>
+  <script src="slideshow.js"></script>
+
+  <div class="footer">
+    <p>Disclaimer I am not a financial advisor this is just general advice about
+      financial literacy for educational purposes</p>
+  </div>
+  <script src="slideshow.js"></script>
 </body>
 
 </html>
