--- a/budgeting.html
+++ b/budgeting.html
@@ -22,50 +22,68 @@
     <a href="modules.html" class="active">Modules</a>
     <a href="resources.html">Resources</a>
   </div>
-  <!-- Budgeting Slideshow -->
-  <!-- <img class="mySlides" src="budgeting_slide1.png">
-<img class="mySlides" src="budgeting_slide2.png">
-<img class="mySlides" src="budgeting_slide3.png">
-<img class="mySlides" src="budgeting_slide4.png"> -->
 
-<!-- Buttons to control the slides -->
-<!-- <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-<button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
+  <!-- Slideshow container -->
+  <div class="slideshow-container">
 
-<script src="slideshow.js">
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+      <img src="budgeting_slides/1.png" alt="budgeting slide 1" style="width:100%">
+    </div>
 
-</script> -->
-  <!-- Transcript-->
-  <div class="content">
-    <h2>Budgeting Basics</h2>
-    <p>Although it may seem basic, budgeting plays an important part in sorting
-    out our finances.</p>
+    <div class="mySlides fade">
+      <img src="budgeting_slides/2.png" alt="budgeting slide 2" style="width:100%">
+    </div>
 
-    <p>First of all you may be asking "What is a budget?" A budget is a statement
-    that records your planned expenditure and your expected income over a certain
-    period of time. This basically means how much you think you'll spend and how
-    much you think you'll earn over a period of time usually a month.</p>
+    <div class="mySlides fade">
+      <img src="budgeting_slides/3.png" alt="budgeting slide 3" style="width:100%">
+    </div>
 
-    <p>Income is anything coming into your account like gifts, lunch money, wages or
-    even dividends (which is a word used for income earned on shares).</p>
+    <div class="mySlides fade">
+      <img src="budgeting_slides/4.png" alt="budgeting slide 4" style="width:100%">
+    </div>
 
-    <p>Expenses is anything going out of your account like
-    car repairs, rent, food, transport etc.</p>
+    <div class="mySlides fade">
+      <img src="budgeting_slides/5.png" alt="budgeting slide 5" style="width:100%">
+    </div>
 
-    <p>For most households the top 3 areas of spending are shelter, food and
-    transport so cautious planning in our budgets in this area will help save so
-    much money which can be dedicated to other areas of spending.</p>
+    <div class="mySlides fade">
+      <img src="budgeting_slides/6.png" alt="budgeting slide 6" style="width:100%">
+    </div>
 
+    <div class="mySlides fade">
+      <a href="budgetingquiz.html"><img src="budgeting_slides/7.png" alt="budgeting slide 7" style="width:100%"></a>
+    </div>
 
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+
+  <!-- The dots/circles -->
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+    <span class="dot" onclick="currentSlide(4)"></span>
+    <span class="dot" onclick="currentSlide(5)"></span>
+    <span class="dot" onclick="currentSlide(6)"></span>
+    <span class="dot" onclick="currentSlide(7)"></span>
   </div>
 
-  <button type="button" name="button">
-    <a href="budgetingquiz.html">Budgeting Quiz</a>
-  </button>
+
+
+  <script src="slideshow.js">
+
+  </script>
+
+
+
 
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
-    financial literacy for educational purposes</p>
+      financial literacy for educational purposes</p>
   </div>
 </body>
 
