--- a/index.html
+++ b/index.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+  <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Money Modules</title>
-  <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="styles.css">
-</head>
+    <head>
+      <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <title>Money Modules</title>
+          <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="styles.css">
+          </head>
 
-<body>
-  <!-- Header-->
-  <div class="header">
-    <div class="header-heading">
-      <img src="logo.png" alt="logo" class="logo">
-      <span>Money Modules</span>
-    </div>
-  </div>
+          <body>
+            <!-- Header-->
+            <div class="header">
+              <div class="header-heading">
+                <img src="logo.png" alt="logo" class="logo">
+                <span>Money Modules</span>
+              </div>
+            </div>
 
-  <div class="nav-bar">
-    <a class="active" href="index.html">Home</a>
-    <a href="aboutus.html">About</a>
-    <a href="modules.html">Modules</a>
-    <a href="resources.html">Resources</a>
-  </div>
-
-
-
-  <!-- Introduction container -->
-  <div class="content">
-    <p> Talofa Lava! Kia Ora! Warm Pacific Greetings! Welcome!</p>
-  </div>
-
-  <div class="center">
-    <img src="cover.jpg" alt="Student doing the budgeting quiz" width="550px"
-    height="430px">
-  </div>
+            <div class="nav-bar">
+              <a class="active" href="index.html">Home</a>
+              <a href="aboutus.html">About</a>
+              <a href="modules.html">Modules</a>
+              <a href="resources.html">Resources</a>
+            </div>
 
 
 
-  <div class="footer">
-    <p>Disclaimer I am not a financial advisor this is just general advice about
-    financial literacy for educational purposes</p>
-  </div>
-</body>
+            <!-- Introduction container -->
+            <div class="content">
+              <p> Talofa Lava! Kia Ora! Warm Pacific Greetings! Welcome!</p>
+            </div>
 
-</html>
+            <div class="center">
+              <img src="cover.jpg" title="Remote learning student doing budgeting quiz" alt="Student doing the budgeting quiz" width="550px" height="430px">
+            </div>
+
+
+
+            <div class="footer">
+              <p>Disclaimer I am not a financial advisor this is just general advice about
+                financial literacy for educational purposes</p>
+            </div>
+          </body>
+
+          </html>
