Final files after debugging

--- a/aboutus.html
+++ b/aboutus.html
@@ -10,14 +10,14 @@
 
 <body>
   <!-- Header-->
-
-
   <div class="header">
     <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
       <span>About Us</span>
     </div>
   </div>
+
+  <!-- Navigation Bar -->
   <div class="nav-bar">
     <a href="index.html">Home</a>
     <a class="active" href="aboutus.html">About</a>
@@ -25,9 +25,7 @@
     <a href="resources.html">Resources</a>
   </div>
 
-
-
-  <!-- Introduction container -->
+  <!-- Purpose of the website -->
   <h2>Purpose</h2>
   <div class="content">
     <p> Growing up I've seen lots of Maori and Pasifika families struggle with
@@ -50,6 +48,7 @@
       be a barrier.</p>
   </div>
 
+  <!-- Footer Container -->
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
       financial literacy for educational purposes</p>
