--- a/budgeting.html
+++ b/budgeting.html
@@ -72,15 +72,10 @@
     <span class="dot" onclick="currentSlide(7)"></span>
   </div>
 
-
-
   <script src="slideshow.js">
-
   </script>
 
-
-
-
+<!-- Footer -->
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
       financial literacy for educational purposes</p>
