--- a/intro.html
+++ b/intro.html
@@ -9,15 +9,16 @@
 </head>
 
 <body>
+
   <!-- Header-->
-
-
   <div class="header">
     <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
       <span>Introduction to Financial Literacy</span>
     </div>
   </div>
+
+  <!-- Navigation Bar -->
   <div class="nav-bar">
     <a href="index.html">Home</a>
     <a href="aboutus.html">About</a>
@@ -26,7 +27,7 @@
   </div>
 
 
-
+  <!-- Slideshow -->
   <div class="slideshow-container">
     <h2>Introduction to Financial Literacy: Money Mindsets</h2>
 
@@ -74,17 +75,11 @@
 
   <script src="slideshow.js"></script>
 
-
+  <!-- Footer -->
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
       financial literacy for educational purposes</p>
   </div>
-
-
-
-
-
-
 </body>
 
 </html>
