--- a/introquiz.html
+++ b/introquiz.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+
+  <!-- Header -->
   <div class="header">
     <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
@@ -16,12 +18,15 @@
     </div>
   </div>
 
+  <!-- Navigation Bar -->
   <div class="nav-bar">
     <a href="index.html">Home</a>
     <a href="aboutus.html">About</a>
     <a href="modules.html" class="active">Modules</a>
     <a href="resources.html">Resources</a>
   </div>
+
+  <!-- Quiz Container -->
   <div class="center">
     <div class="quiz-container" id="quiz">
       <div class="quiz-header">
@@ -49,10 +54,13 @@
 
         </ul>
       </div>
+      <!-- Submit Button -->
       <button id="submit">Submit</button>
     </div>
   </div>
   <script src="intro.js"></script>
+
+  <!-- Footer -->
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
       financial literacy for educational purposes</p>
