--- a/modules.html
+++ b/modules.html
@@ -10,14 +10,14 @@
 
 <body>
   <!-- Header-->
-
-
   <div class="header">
     <div class="header-heading">
       <img src="logo.png" alt="logo" class="logo">
       <span>Modules</span>
     </div>
   </div>
+
+  <!-- Navigation Bar -->
   <div class="nav-bar">
     <a href="index.html">Home</a>
     <a href="aboutus.html">About</a>
@@ -25,71 +25,72 @@
     <a href="resources.html">Resources</a>
   </div>
 
-
-
-  <!--Modules -->
+  <!--Intro to Financial Literacy Module -->
   <div class="triple-containers-container">
     <div class="triple-container">
+      <!-- Header -->
       <div class="triple-container-header">
         Introduction to Financial Literacy
       </div>
+      <!-- Slide 1 Image -->
       <div class="center">
-        <img src="intro_slides/1.png" title="Intro Slides 1" alt="Intro Slides 1" width="350px" height="200px">
+        <img src="intro_slides/1.png" title="Intro Slides 1" alt="Intro Slides 1" width="350" height="200">
       </div>
+      <!-- Intro to Financial literacy Summary -->
       <div class="triple-container-body">
         This lesson will bust some common myths around financial literacy! This lesson is perfect if you are looking
         for some information on how to start your journey.
       </div>
+      <!-- Link styled like a button -->
       <div class="triple-container-footer">
-        <a href="intro.html">
-          <button class="container-button">
-            View More
-          </button>
-        </a>
+        <a href="intro.html" class="container-button">View More</a>
       </div>
     </div>
+
+    <!-- Budgeting Module -->
     <div class="triple-container">
       <div class="triple-container-header">
         Budgeting Basics
       </div>
+      <!-- Slide 1 image -->
       <div class="center">
-        <img src="budgeting_slides/1.png" title="Budgeting Slides 1" alt="Intro Slides 1" width="350px" height="200px">
+        <img src="budgeting_slides/1.png" title="Budgeting Slides 1" alt="Intro Slides 1" width="350" height="200">
       </div>
+      <!-- Budgeting Summary -->
       <div class="triple-container-body">
         This module will take you through the basics of what a budget is,
         the parts of a budget and the top spending areas for most
         households.
       </div>
+      <!-- Link styled like a button -->
       <div class="triple-container-footer">
-        <a href="budgeting.html">
-          <button class="container-button">
-            View More
-          </button>
-        </a>
+        <a href="budgeting.html" class="container-button">View More</a>
       </div>
     </div>
+
+    <!-- Expect the Unexpected Header -->
     <div class="triple-container">
       <div class="triple-container-header">
         Expect the Unexpected
       </div>
+      <!-- Image -->
       <div class="center">
-        <img src="savings_slides/1.png" title="Savings Slides 1" alt="Savings Slides 1" width="350px" height="200px">
+        <img src="savings_slides/1.png" title="Savings Slides 1" alt="Savings Slides 1" width="350" height="200">
       </div>
+      <!-- Summary -->
       <div class="triple-container-body">
         Fa'alavelave a common financial obligation in Samoan communities.
         In this module we learn the importance of having an emergency fund
         to be prepared for these unexpected times.
       </div>
+      <!-- Link styled like a button -->
       <div class="triple-container-footer">
-        <a href="savings.html">
-          <button class="container-button" href="savings.html">
-            View More
-          </button>
-        </a>
+        <a href="savings.html" class="container-button">View More</a>
       </div>
     </div>
-
   </div>
+
+  <!-- Footer Button -->
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
       financial literacy for educational purposes</p>
