--- a/resources.html
+++ b/resources.html
@@ -16,6 +16,8 @@
       <span>Resources</span>
     </div>
   </div>
+
+  <!-- Navigation Bar -->
   <div class="nav-bar">
     <a href="index.html">Home</a>
     <a href="aboutus.html">About</a>
@@ -23,84 +25,92 @@
     <a class="active" href="resources.html">Resources</a>
   </div>
 
+  <!-- Resource #1 - Māori Millionaire -->
   <div class="triple-containers-container">
-      <div class="triple-container">
-          <div class="triple-container-header">
-              Maori Millionaire
-          </div>
-          <div class="center">
-  <img src="Te_Kahukura_Boynton.png" title="Te Kahukura Boynton" alt="Te Kahukura Boynton" width="200px" height=200px">
-</div>
-          <div class="triple-container-body">
-              Te Kahukura Boynton owner of Maori Millionire has a blog and
-              podcasts where she teaches various financial literacy topics
-              like investing, personal finance and self development.
-          </div>
-          <div class="triple-container-footer">
-              <a href="https://www.maorimillionaire.com/" target="
-              ">
-                  <button class="container-button">
-                      View Website
-                  </button>
-              </a>
-          </div>
-      </div>
-      <div class="triple-container">
-          <div class="triple-container-header">
-              Tales From a Financial Hot Mess
-          </div>
-          <div class="center">
-            <img src="frances_cook.png" title="Frances Cook" alt="Frances Cook
-            with her book 'Tales From a Financial Hot Mess'" width="190px"
-            height=200px">
-          </div>
-          <div class="triple-container-body">
-              Frances Cook tells her personal story about reaching financial
-              independence right from the start when she was a "financial mess".
-              The messages and lessons in this book are so empowering and proves
-              anyone can reach financial independence no matter what
-              the starting point is.
-          </div>
-          <div class="triple-container-footer">
-              <a href="https://www.penguin.co.nz/authors/frances-cook"
-              target="_blank">
-                  <button class="container-button">
-                      View More
-                  </button>
-              </a>
-          </div>
-      </div>
-      <div class="triple-container">
-          <div class="triple-container-header">
-              Girls That Invest
-          </div>
-          <div class="center">
-            <img src="Sim_and_Sonya.png" title="Sim & Sonya"
-            alt="Sim & Sonya" width="180px" height=200px">
-          </div>
-          <div class="triple-container-body">
-              Sim & Sonya founded this amazing educational podcast that educates
-              people on all things investing. Their podcast is an awesome
-              resource especially if investing is something you are interestd
-              in.
-          </div>
-          <div class="triple-container-footer">
-              <a href="https://girlsthatinvest.com/"  target="_blank">
-                  <button class="container-button">
-                      View Website
-                  </button>
-              </a>
-          </div>
+    <div class="triple-container">
+      <div class="triple-container-header">
+        Māori Millionaire
       </div>
 
+      <!-- Resource #1 - Image -->
+      <div class="center">
+        <img src="Te_Kahukura_Boynton.png" title="Te Kahukura Boynton" alt="Te Kahukura Boynton" width="200" height="200">
+      </div>
+      <!-- Resource #1 - Summary -->
+      <div class="triple-container-body">
+        Te Kahukura Boynton owner of Māori Millionire has a blog and
+        podcasts where she teaches various financial literacy topics
+        like investing, personal finance and self development.
       </div>
 
+      <!-- Resource #1 - Link that looks like a button -->
+      <div class="triple-container-footer">
+        <a href="https://www.Māorimillionaire.com/" class="container-button" target="_blank">View Website</a>
+      </div>
+    </div>
+
+    <!-- Resource #2 - Tales From a Financial Hot Mess -->
+    <div class="triple-container">
+      <div class="triple-container-header">
+        Tales From a Financial Hot Mess
+      </div>
+
+      <!-- Resource #2 - Photo -->
+      <div class="center">
+        <img src="frances_cook.png" title="Frances Cook" alt="Frances Cook
+            with her book 'Tales From a Financial Hot Mess'" width="190" height="200">
+      </div>
+
+      <!-- Resource #2 - Summary -->
+      <div class="triple-container-body">
+        Frances Cook tells her personal story about reaching financial
+        independence right from the start when she was a "financial mess".
+        The messages and lessons in this book are so empowering and proves
+        anyone can reach financial independence no matter what
+        the starting point is.
+      </div>
+      <!-- Link that looks like a button -->
+      <div class="triple-container-footer">
+        <a href="https://www.penguin.co.nz/authors/frances-cook" class="container-button" target="_blank">View More</a>
+      </div>
+    </div>
+
+    <!-- Resource #3 - Girls that Invest -->
+    <div class="triple-container">
+
+      <!-- Resource #3 - Header -->
+      <div class="triple-container-header">
+        Girls That Invest
+      </div>
+      <div class="center">
+
+        <!-- Resource #3 - Image -->
+        <img src="Sim_and_Sonya.png" title="Sim & Sonya" alt="Sim & Sonya" width="180" height="200">
+      </div>
+
+      <!-- Resource #3 - Summary -->
+      <div class="triple-container-body">
+        Sim & Sonya founded this amazing educational podcast that educates
+        people on all things investing. Their podcast is an awesome
+        resource especially if investing is something you are interested
+        in.
+      </div>
+
+      <!-- Link that looks like a button -->
+      <div class="triple-container-footer">
+        <a href="https://girlsthatinvest.com/" class="container-button" target="_blank">View Website</a>
+      </div>
+    </div>
+
+  </div>
 
 
 
+  <!-- Footer Container -->
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
-    financial literacy for educational purposes</p>
+      financial literacy for educational purposes</p>
   </div>
 </body>
+
 </html>
