--- a/savings.html
+++ b/savings.html
@@ -16,6 +16,8 @@
       <span>Expect the Unexpected: Fa'alavelave</span>
     </div>
   </div>
+
+  <!-- Navigation Bar -->
   <div class="nav-bar">
     <a href="index.html">Home</a>
     <a href="aboutus.html">About</a>
@@ -23,6 +25,7 @@
     <a href="resources.html">Resources</a>
   </div>
 
+  <!-- Slideshow -->
   <div class="slideshow-container">
 
     <!-- Full-width images with number and caption text -->
@@ -73,11 +76,11 @@
 
   <script src="slideshow.js"></script>
 
+  <!-- footer -->
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
       financial literacy for educational purposes</p>
   </div>
-  <script src="slideshow.js"></script>
 </body>
 
 </html>
