--- a/budgetingquiz.html
+++ b/budgetingquiz.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="styles.css">
 </head>
 
+<!-- Header -->
+
 <body>
   <div class="header">
     <div class="header-heading">
@@ -16,12 +18,15 @@
     </div>
   </div>
 
+  <!-- Navigation Bar-->
   <div class="nav-bar">
     <a href="index.html">Home</a>
     <a href="aboutus.html">About</a>
     <a href="modules.html" class="active">Modules</a>
     <a href="resources.html">Resources</a>
   </div>
+
+  <!-- Quiz Container -->
   <div class="center">
     <div class="quiz-container" id="quiz">
       <div class="quiz-header">
@@ -48,11 +53,15 @@
           </li>
 
         </ul>
+
+        <!-- Submit button -->
       </div>
       <button id="submit">Submit</button>
     </div>
   </div>
   <script src="budgeting.js"></script>
+
+  <!-- Footer container -->
   <div class="footer">
     <p>Disclaimer I am not a financial advisor this is just general advice about
       financial literacy for educational purposes</p>
